--- a/app/src/main/res/layout/admin_bus_list_item.xml
+++ b/app/src/main/res/layout/admin_bus_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="250dp">
 
     <ImageView
         android:id="@+id/adminBusImgV"
@@ -37,9 +37,9 @@
         android:id="@+id/adminBusEndPointTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="76dp"
         android:text="Điểm đến"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/adminBusStartPointTV"
         app:layout_constraintTop_toTopOf="@+id/adminBusStartPointTV" />
 
     <TextView
@@ -55,9 +55,8 @@
         android:id="@+id/adminBusEndTimeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         android:text="Giờ kết thúc"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/adminBusEndPointTV"
         app:layout_constraintTop_toTopOf="@+id/adminBusStartTimeTV" />
 
     <TextView
@@ -67,5 +66,15 @@
         android:text="Giá"
         app:layout_constraintBottom_toBottomOf="@+id/adminBusImgV"
         app:layout_constraintStart_toStartOf="@+id/adminBusOpTV" />
+
+    <Button
+        android:id="@+id/adminBusDeleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
