--- a/app/src/main/res/layout/admin_bus_list_item.xml
+++ b/app/src/main/res/layout/admin_bus_list_item.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="Nhà xe"
+        android:text="Bus Operator"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/adminBusImgV"
         app:layout_constraintTop_toTopOf="@+id/adminBusImgV" />
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Điểm đi"
+        android:text="Start point"
         app:layout_constraintStart_toStartOf="@+id/adminBusOpTV"
         app:layout_constraintTop_toBottomOf="@+id/adminBusOpTV" />
 
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
-        android:text="Điểm đến"
+        android:text="End point"
         app:layout_constraintStart_toEndOf="@+id/adminBusStartPointTV"
         app:layout_constraintTop_toTopOf="@+id/adminBusStartPointTV" />
 
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Giờ bắt đầu"
+        android:text="Start time"
         app:layout_constraintStart_toStartOf="@+id/adminBusOpTV"
         app:layout_constraintTop_toBottomOf="@+id/adminBusStartPointTV" />
 
@@ -55,7 +55,7 @@
         android:id="@+id/adminBusEndTimeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Giờ kết thúc"
+        android:text="End time"
         app:layout_constraintStart_toStartOf="@+id/adminBusEndPointTV"
         app:layout_constraintTop_toTopOf="@+id/adminBusStartTimeTV" />
 
@@ -63,7 +63,7 @@
         android:id="@+id/adminBusPriceTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Giá"
+        android:text="Price"
         app:layout_constraintBottom_toBottomOf="@+id/adminBusImgV"
         app:layout_constraintStart_toStartOf="@+id/adminBusOpTV" />
 
