--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="facebook">#1877F2</color>
     <color name="logo_color">#663F51B5</color>
+    <color name="start">#6BB514</color>
+    <color name="end">#3048CF</color>
 </resources>
