--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         android:layout_width="328dp"
         android:layout_height="131dp"
         android:layout_marginTop="4dp"
-        android:tint="#66121F6C"
+        app:tint="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
