--- a/app/src/main/res/layout/activity_user_infor_ticket_history.xml
+++ b/app/src/main/res/layout/activity_user_infor_ticket_history.xml
@@ -92,8 +92,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/facebook"
-            android:text="Previous" />
+            android:background="@color/purple_500"
+            android:text="Previous"
+            android:textColor="@color/white" />
 
         <Space
             android:layout_width="wrap_content"
@@ -105,8 +106,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/facebook"
-            android:text="Next" />
+            android:background="@color/purple_500"
+            android:text="Next"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <ImageView
