build: build booking detail screen

--- a/app/src/main/res/layout/activity_fill_booking_form.xml
+++ b/app/src/main/res/layout/activity_fill_booking_form.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Fill Booking Form"
+            android:text="@string/fill_booking_form"
             android:textColor="#ffffff"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -34,7 +34,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/baseline_arrow_back_10"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -198,9 +198,9 @@
         android:id="@+id/btnCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/corner_button"
         android:text="@string/cancel"
         android:textColor="@color/white"
-        android:background="@drawable/corner_button"
         app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
         app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
         app:layout_constraintStart_toStartOf="parent"
@@ -211,9 +211,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:textColor="@color/white"
         android:background="@drawable/corner_button"
         android:text="@string/submit"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnCancel" />
