--- a/app/src/main/res/layout/activity_user_infor_ticket_history.xml
+++ b/app/src/main/res/layout/activity_user_infor_ticket_history.xml
@@ -98,7 +98,7 @@
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <Button
