--- a/app/src/main/res/layout/pair_attribute_value.xml
+++ b/app/src/main/res/layout/pair_attribute_value.xml
@@ -3,25 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="100dp">
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="87dp"
+        android:layout_width="129dp"
         android:layout_height="0dp"
         android:background="@android:color/darker_gray"
         android:gravity="center_horizontal|center_vertical"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="58dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
