refactor: fix booking detail UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="end">#3048CF</color>
     <color name="attribute_gray">#20706060</color>
     <color name="blank">#00FFFFFF</color>
+    <color name="light_gray">#F0F0F0</color>
 </resources>
