--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <solid android:color="@android:color/white" />
-    <stroke android:width="5dip" android:color="#4fa5d5"/>
+    <stroke android:width="1dp" android:color="#dee2e6"/>
     <corners
-        android:radius="15dp"   >
+        android:radius="10dp"   >
     </corners>
 </shape>
