--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,81 +3,162 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Home">
-    <LinearLayout
-        android:id="@+id/header"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_height="match_parent"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="VEXERE"
-            android:textSize="30sp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            />
 
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/blogText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/header"
-        android:text="Bài viết"
-        android:textSize="20sp"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-
-    <LinearLayout
-        android:id="@+id/blogCarousel"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        app:layout_constraintTop_toBottomOf="@+id/blogText"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        >
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/searchBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/blogCarousel"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/textview_border"
-        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:orientation="vertical"
             >
 
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteSearchStudent"
+
+            <LinearLayout
+                android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:completionThreshold="3"
-                android:layout_below="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
-                />
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="VEXERE"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/blogText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:text="Bài viết"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/header" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/blogList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/blogText"></androidx.recyclerview.widget.RecyclerView>
+
+            <RelativeLayout
+                android:id="@+id/searchBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/textview_border"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/blogList">
+
+                <GridLayout
+                    android:id="@+id/gridLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:columnCount="2">
+
+
+                    <AutoCompleteTextView
+                        android:id="@+id/autoCompleteLocationFrom"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_below="@+id/textView"
+                        android:drawableStart="@drawable/ic_baseline_location_on_24"
+                        android:hint="Destination"
+                        android:layout_gravity="fill"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:completionThreshold="3"
+                        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+                    <AutoCompleteTextView
+                        android:id="@+id/autoCompleteDestinationTo"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_below="@+id/textView"
+                        android:drawableStart="@drawable/ic_baseline_location_on_24"
+                        android:hint="Destination"
+                        android:layout_gravity="fill"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:completionThreshold="3"
+                        app:layout_constraintTop_toBottomOf="@+id/textView" />
+                </GridLayout>
+
+                <EditText
+                    android:id="@+id/datePicker"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_below="@+id/gridLayout"
+                    android:hint="Departure date"
+                    android:layout_marginTop="10dp"
+                    android:drawableStart="@drawable/ic_baseline_date_range_24"
+                    android:layout_marginBottom="0dp"
+                    />
+
+                <Button
+                    android:id="@+id/searchButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="true"
+
+                    android:layout_below="@+id/datePicker"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Search"
+                    android:textColor="#fff"
+                    android:textSize="15sp"
+
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/searchText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:text="Kết quả"
+                android:textColor="#000000"
+                android:textSize="23sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/searchBox" />
+
+            <ListView
+                android:orientation="vertical"
+                android:id="@+id/searchResult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:fillViewport="true"
+                android:dividerHeight="20.0sp"
+                android:divider="@android:color/transparent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchText" />
         </LinearLayout>
-    </RelativeLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
