--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="53dp"
         android:layout_marginEnd="40dp"
         android:src="@tools:sample/avatars"
-        app:tint="@color/logo_color"
+        android:tint="@color/logo_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
