--- a/app/src/main/res/layout/activity_blog_detail.xml
+++ b/app/src/main/res/layout/activity_blog_detail.xml
@@ -18,7 +18,7 @@
 
 
     <ScrollView
-        android:id="@+id/blog_detail_scoll"
+        android:id="@+id/blog_detail_scroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -35,14 +35,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/imgBlogDetail"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
-                android:id="@+id/blog_detail_title"
+                android:id="@+id/txtTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -56,7 +56,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/blog_detail_create_time"
+                android:id="@+id/txtCreateTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -73,7 +73,7 @@
                 android:background="@color/attribute_gray" />
 
             <TextView
-                android:id="@+id/blog_content"
+                android:id="@+id/txtContent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
